# iMonitor

./: .clang-format  .gitignore  CMakeLists.txt  README-zh_CN.md  README.md  README_EN.md  README_zh.md  build.bat
cmake/: common.cmake  git.cmake  hook.cmake  qt.cmake
inc/: iMonitor.h  iMonitorPlugin.h  iMonitorPluginUIExtension.h  iMonitorProtocol.h  iMonitorProtocolSDK.h  iMonitorSDK.h  iMonitorSDKExtension.h  iMonitorUIMessage.h
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp  stdafx.h  version.rc
src/ui/: CMakeLists.txt  UICommon.cpp  UICommon.h  UIMain.cpp  UIMain.h  UIMain.ui  UIManager.cpp  UIManager.h  main.cpp  res.h  res.qrc  stdafx.h
src/ui/Common/: UI.h  UIEventFilter.cpp  UIEventFilter.h
src/ui/Model/: UIMSGModel.cpp  UIMSGModel.h  UIModel.cpp  UIModel.h  UITreeViewModel.cpp  UITreeViewModel.h
src/ui/Service/: IConfigService.h  IMenuService.h  IMessageService.h  IPlugin.h  IService.h  IVisionService.h  Service.h  ServiceEvent.h
src/ui/Service/Config/: UIConfigService.cpp  UIConfigService.h
src/ui/Service/Menu/: UIMenuService.cpp  UIMenuService.h
src/ui/Service/Message/: UIMessageColumn.cpp  UIMessageColumn.h  UIMessageColumnManager.cpp  UIMessageColumnManager.h  UIMessageService.cpp  UIMessageService.h
src/ui/Service/Vision/: UIVisionService.cpp  UIVisionService.h
src/ui/View/: UIMessageProperties.cpp  UIMessageProperties.h  UIMessageProperties.ui  UIMessageView.cpp  UIMessageView.h  UISettingView.cpp  UISettingView.h  UISettingView.ui
src/ui/View/Filter/: UIFilterBar.cpp  UIFilterBar.h  UIFilterBar.ui  UIFilterEditView.cpp  UIFilterEditView.h  UIFilterEditView.ui
src/ui/View/Properties/: UICallstackView.cpp  UICallstackView.h  UICallstackView.ui  UIMessageDetailView.cpp  UIMessageDetailView.h  UIMessageDetailView.ui  UIProcessView.cpp  UIProcessView.h  UIProcessView.ui
src/ui/View/Settings/: UISymbolSettingView.cpp  UISymbolSettingView.h  UISymbolSettingView.ui
src/ui/View/StatusBar/: UIStatusBar.cpp  UIStatusBar.h
src/ui/View/ToolBar/: UIToolBar.cpp  UIToolBar.h
src/ui/res/language/: zh_cn.ts
src/ui/res/qss/: build.bat  default.css
src/ui/res/qss/less/: button.less  color.less  default.less  input.less  menu.less
(+112 files in other folders)
